add route timeline
